--- a/project_10/index.html
+++ b/project_10/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../lesson01/images/books.webp" type="image/*">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Fruits CRUD</title>
 </head>
 <body>
@@ -55,6 +55,6 @@
         </div>
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
